# VoiceAssistant

./: .gitignore  CMakeLists.txt  README.md  build.sh
SourceFiles/: main.cpp
SourceFiles/commands/: command_manager.cpp  command_manager.h
SourceFiles/core/: voice_assistant.cpp  voice_assistant.h
SourceFiles/speech/: speech_recognizer.cpp  speech_recognizer.h
